// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Brand should match the snapshot 1`] = `
<div
  class="style__StyledBrand-hav549-1 kznDAl"
>
  <p
    class="style__StyledLogo-hav549-2 eXuYOZ"
  >
    <span>
      友
    </span>
    <span
      class="style__StyledHighlight-hav549-3 hKVPpb"
    >
      カンジ
    </span>
  </p>
</div>
`;

exports[`Highlight should match the snapshot 1`] = `
<span
  class="style__StyledHighlight-hav549-3 hKVPpb"
>
  カンジ
</span>
`;

exports[`Logo should match the snapshot 1`] = `
<p
  class="style__StyledLogo-hav549-2 eXuYOZ"
>
  <span>
    友
  </span>
  <span
    class="style__StyledHighlight-hav549-3 hKVPpb"
  >
    カンジ
  </span>
</p>
`;
